third_party/move/tools/move-decompiler/tests/compiler-v2-test/reference-safety/v1-tests/borrow_global.exp
module 0x8675309::M {
    struct R has key {
        f: u64,
    }
    fun t0(addr: address): bool {
        let _t3 = addr;
        let _t5 = &borrow_global_mut<R>(_t3).f;
        let _t6 = addr;
        _t5 == &borrow_global<R>(_t6).f
    }
    fun t1(addr: address): bool {
        let _t3 = addr;
        let _t6 = *&borrow_global<R>(_t3).f;
        let _t7 = addr;
        _t6 == *&borrow_global<R>(_t7).f
    }
    fun t2(addr: address): bool {
        let _t1 = addr;
        let _t4 = *&borrow_global<R>(_t1).f;
        let _t5 = addr;
        _t4 == *&borrow_global<R>(_t5).f
    }
    fun t3(addr: address): bool {
        let R{f: _t4} = move_from<R>(addr);
        let _t1 = _t4;
        let _t5 = addr;
        *&borrow_global<R>(_t5).f == _t1
    }
    fun t4(cond: bool, addr: address): bool {
        let _t4;
        let _t2 = R{f: 0};
        let _t7 = addr;
        if (cond) {
            let _t11 = addr;
            _t4 = borrow_global<R>(_t11)
        } else _t4 = freeze(&mut _t2);
        let R{f: _t18} = _t2;
        &borrow_global<R>(_t7).f == &_t4.f
    }
}

--- unable to recompile the decompiled code:
exiting with stackless-bytecode checks failed
error: local `_t2` of type `R` does not have the `copy` ability
   ┌─ borrow_global.move:37:13
   │
37 │         let R{f: _t18} = _t2;
   │             ^^^^^^^^^^ copy needed here because value is still in use

error: local `_t2` of type `R` does not have the `drop` ability
   ┌─ borrow_global.move:37:13
   │
37 │         let R{f: _t18} = _t2;
   │             ^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used
